# simple_python_translator

./: LICENSE  README.md  pyproject.toml  setup.py  translator.py
